<resources>
    <string name="app_name">تحدى نفسك</string>
    <string name="image_main">Image_main</string>
    <string name="islamic">اسلامية </string>
    <string name="islamic_info">معلومات اسلامية</string>
    <string name="history">التاريخ</string>
    <string name="history_info">معلومات تاريخية</string>
    <string name="history_view">تاريخية</string>
    <string name="capitals">العواصم</string>
    <string name="capitals_info">عواصم الدول</string>
    <string name="Geographically">الجغرافية</string>
    <string name="Geographically_info">معلومات جغرافية</string>
    <string name="Sciences">العلوم</string>
    <string name="Sciences_info">معلومات علمية</string>
    <string name="More">المزيد</string>
    <string name="textquestion">Question</string>
    <string name="btn_four">Btn Four</string>
    <string name="btn_tree">Btn Tree</string>
    <string name="btn_two">Btn Two</string>
    <string name="btn_one">Btn One</string>
    <string name="score">Score: </string>
    <string name="hight_score">Height Score: </string>
    <string name="height_score">اعــــلى النتـــــائج </string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="wrong">0</string>
    <string name="time">Time</string>
    <string name="correct">0</string>
    <string name="counter">15</string>
    <string name="your_result_is">Your result is</string>
    <string name="tryagain">Try</string>
    <string name="back">Stop</string>
    <string name="rate_me">Rate Me</string>
    <string name="no_answer">No Answer</string>

    <string name="general">عامة</string>
    <string name="general_info">معلومات عامة</string>
    <string name="technology">التقنــية</string>
    <string name="technology_info">معلومات تقنــية</string>
    <string name="animals">الحيوانات</string>
    <string name="animals_info">معلومات عن الحيوانات</string>
    <string name="politic">السياسـة</string>
    <string name="politic_info">معلومات سياسـة</string>
    <string name="cultural">ثقافية</string>
    <string name="cultural_info">معلومات ثقافية</string>
    <string name="sport">الرياضـة</string>
    <string name="sport_info">معلومات في الرياضـة</string>
    <string name="art">الفنـــون</string>
    <string name="art_info">معلومات في الفنون</string>
    <string name="questions">الأسئــــــــالة</string>
    <string name="_100">100</string>
    <string name="answer">Answer</string>
    <string name="title_activity_ads">AdsActivity</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="are_you_ready">Are you ready !</string>


</resources>
