<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#f2f2f2"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/your_result_is"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D6A2E8"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/txtQuestionFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/finished_score_normal"
            android:padding="8dp"
            android:text="@string/textquestion"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtScoreFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/finished_score_normal"
            android:padding="8dp"
            android:text="@string/no_answer"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D6A2E8"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/txtFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/finished_score_normal"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/cup_icon"
            android:contentDescription="@string/image_main" />

    </LinearLayout>


    <!-- Start LinearLayout RatingBar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/btnFinishAnswer"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/not_stared_score_normal"
            android:hint="@string/answer"
            android:textAllCaps="false"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnFinishScore"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/custom_start_btn"
            android:hint="@string/score"
            android:textAllCaps="false"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnFinishCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_cancel_btn"
            android:hint="@string/cancel"
            android:textAllCaps="false"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>