<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#f2f2f2"
    android:paddingBottom="6dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/your_result_is"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D6A2E8"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/textScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_for_score"
            android:padding="8dp"
            android:text="@string/textquestion"
            android:textColor="@color/colorGrayDrak"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textResultUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_for_score"
            android:padding="8dp"
            android:text="@string/no_answer"
            android:textColor="@color/colorGrayDrak"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:background="#D6A2E8"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imgCorrectInvisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_correct_counter"
            android:contentDescription="@string/image_main" />

        <TextView
            android:id="@+id/textCorrectCountResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_for_score"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="3dp"
            android:text="@string/correct"
            android:textColor="@color/colorGrayDrak"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/imgWrongInvisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@mipmap/ic_cloce_counter"
            android:contentDescription="@string/image_main" />

        <TextView
            android:id="@+id/textWrongCountResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_for_score"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="3dp"
            android:text="@string/wrong"
            android:textColor="@color/colorGrayDrak"
            android:textSize="16sp" />
    </LinearLayout>


    <!-- Start LinearLayout RatingBar -->
    <RatingBar
        android:id="@+id/ratingBarResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:numStars="5"
        android:stepSize="1"
        android:theme="@style/RatingBar" />


    <Button
        android:id="@+id/submitRating"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/all_btn_style"
        android:foregroundGravity="center"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/rate_me"
        android:textAlignment="center"
        android:textAllCaps="false" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/custom_result_try"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/custom_start_btn"
            android:hint="@string/tryagain"
            android:textAllCaps="false"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp" />

        <Button
            android:id="@+id/custom_result_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_cancel_btn"
            android:hint="@string/cancel"
            android:textAllCaps="false"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>