<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#f2f2f2"
    android:paddingTop="6dp"
    android:paddingBottom="6dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/titleTextDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorWhite"
        android:paddingBottom="5dp"
        android:text="@string/islamic_info"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/custom_dialog_btn_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/custom_start_btn"
            android:hint="@string/start"
            android:textAllCaps="false"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_cancel_btn"
            android:hint="@string/cancel"
            android:textAllCaps="false"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>