<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_start"
    tools:context="com.drmas.issam.quizeaslamic.AdsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- view for AdMob Interstitial Ad -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/icon_ready_to_start"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_question_style"
            android:padding="10dp"
            android:text="@string/are_you_ready"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/next_level_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
