<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:orientation="vertical"
    tools:context="com.drmas.issam.quizeaslamic.TechnologyActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <android.support.v7.widget.Toolbar
            android:id="@+id/technologyToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/technology_info"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorBlack" />

        <LinearLayout
            android:padding="10dp"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="10dp"
                app:cardElevation="5dp">

                <ImageButton
                    android:contentDescription="@string/image_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_correct_counter" />
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/counterDownTechnology"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/custom_counter"
                android:hint="@string/counter"
                android:padding="5dp"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />


            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorWhite"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="10dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardElevation="5dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_cloce_counter"
                    android:contentDescription="@string/image_main" />
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:paddingBottom="5dp"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textCorrectCountTechnology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_question_style"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/correct"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:textColor="@color/colorBlack"
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:text="@string/time" />

            <TextView
                android:id="@+id/textWrongCountTechnology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_question_style"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/wrong"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:background="@color/colorGray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@color/colorGray"
                android:baselineAligned="false"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/countQuestionDownTechnology"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/all_btn_style"
                    android:padding="6dp"
                    android:text="@string/_100"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/all_btn_style"
                    android:padding="5dp"
                    android:text="@string/questions"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textQuestionTechnology"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/all_btn_style"
                android:padding="20dp"
                android:text="@string/textquestion"
                android:textColor="@color/colorGrayDrak"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/boday3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/capital_geographic"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="315dp">

                <android.support.v7.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorWhite"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingTop="10dp"
                    app:cardElevation="5dp">

                    <Button
                        android:id="@+id/ButtonChoice1Technology"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_style"
                        android:hint="@string/btn_one"
                        android:onClick="onClickBtnTechnology"
                        android:padding="10dp"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorWhite"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingTop="10dp"
                    app:cardElevation="5dp">

                    <Button
                        android:id="@+id/ButtonChoice2Technology"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_style"
                        android:hint="@string/btn_two"
                        android:onClick="onClickBtnTechnology"
                        android:padding="10dp"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>
            </LinearLayout>


            <LinearLayout
                app:layout_constraintBottom_toTopOf="@+id/capital_geographic"
                android:id="@+id/boday4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="315dp">

                <android.support.v7.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorWhite"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingTop="10dp"
                    app:cardElevation="5dp">

                    <Button
                        android:id="@+id/ButtonChoice3Technology"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_style"
                        android:hint="@string/btn_tree"
                        android:onClick="onClickBtnTechnology"
                        android:padding="10dp"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorWhite"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingTop="10dp"
                    app:cardElevation="5dp">

                    <Button
                        android:id="@+id/ButtonChoice4Technology"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_style"
                        android:hint="@string/btn_four"
                        android:onClick="onClickBtnTechnology"
                        android:padding="10dp"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </TableLayout>

</ScrollView>
